<resources>
    <string name="app_name">WallBeauty</string>
    <string name="navigation_close">Naviation Close</string>
    <string name="navigation_open">Navigation Open</string>
    <string name="label_explore">Explore</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_history">History</string>
    <string name="label_rateApp">Rate this App</string>
    <string name="label_feedback">Send Feedback</string>
    <string name="label_otherApps">Other Apps</string>
    <string name="label_settings">Settings</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_content">Do you Love WallBeauty HD? If you do, please write
        us a good review at Google Play Store. "\n" It helps us a lot. Thanks ! </string>
    <string name="later_label">Later</string>
    <string name="yes_label">Yes</string>
    <string name="feedback">Please leave your feedback here. </string>
    <string name="retry">Retry</string>
    <string name="report_problem"><u>Report a problem</u></string>
    <string name="app_play_store">http://play.google.com/store/apps/details?id=in.blogspot.upsolving.wallbeauty</string>
    <string name="app_market">market://details=?id=in.blogspot.upsolving.wallbeauty</string>
    <string name="my_app_store_account">https://play.google.com/store/apps/developer?id=Kishore+Patel</string>
    <string name="my_app_market_account">market://?id=Kishore+Patel</string>
    <string name="install_app_store">Please install Google Play Store App</string>
    <string name="no_mail_agent">No Mail Agent found :( </string>
    <string name="mail_id">ram_rajya_apps@yahoo.com</string>
</resources>